<resources>
    <string name="app_name">SimCity São João</string>
    <string name="bandeirolas">bandeirolas de festa junina.</string>
    <string name="simcity_sao_joao">SimCity São João</string>
    <string name="texto_apresentacao">Festas juninas, é algo muito bom! E em SimCity não é diferente! Aqui nesse app você consegue organizar a sua lista de compras para a sua festa junina de maneira fácil e simples, só cadastrar os produtos da sua receita e se divertir!</string>
    <string name="ir_para_produtos">Ir para produtos</string>
    <string name="cadastro_de_produtos">Cadastro de produtos</string>
    <string name="hint_nome_do_produto">Nome do produto</string>
    <string name="hint_quantidade_produto">Quantidade do produto</string>
    <string name="hint_valor_unitario">Valor (unitário) do produto</string>
    <string name="hint_receita">Receita</string>
    <string name="ver_produtos">Ver produtos</string>
    <string name="botao_valor_total">Valor total</string>
    <string name="cadastrar_produto">cadastrar produto</string>
    <string name="carrinho_de_compras">carrinho de compras</string>
    <string name="produto_titulo_card">%s - %s</string>
    <string name="quantidade_produto">Quantidade: %s</string>
    <string name="valor_unitario">Valor unitário: %s</string>
    <string name="receita">Receita: %s</string>
    <string name="imagem_coracao">Imagem de um coração para favoritar</string>
    <string name="cadastrar_novo_produto">Cadastrar novo produto</string>
    <string name="valor_total">O valor total de todos os produtos é de: R$%s</string>
    <string name="texto_teste">Texto para teste!</string>
</resources>