<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".total.TotalProdutosActivity">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/carrinho_de_compras"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        app:tint="@color/cor1"/>

    <TextView
        android:id="@+id/tvValorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:text="@string/texto_teste"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnNovoCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/cor3"
        android:text="@string/cadastrar_novo_produto"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnVerProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/cor4"
        android:text="@string/ver_produtos"

        android:textColor="@color/white" />

</LinearLayout>